--- a/Mics/Mics/BackgroundWorker.xaml
+++ b/Mics/Mics/BackgroundWorker.xaml
@@ -8,24 +8,41 @@
         Title="BackgroundWorker" Height="450" Width="800">
     <Window.Resources>
         <local:DirectoryValidator x:Key="DirectoryValidator" />
+        <Style TargetType="Button" x:Key="StartStop">
+            <Setter Property="ToolTipService.ShowOnDisabled" Value="True"/>
+            <Style.Triggers>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsEnabled" Value="False"/>
+                    </MultiTrigger.Conditions>
+                    <MultiTrigger.Setters>
+                        <Setter Property="ToolTip" Value="Select the folder first" />
+                    </MultiTrigger.Setters>
+                </MultiTrigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
     <DockPanel Margin="10">
         <DockPanel DockPanel.Dock="Top">
-            <Button Name="SelectFolder" Click="SelectFolder_Click"  DockPanel.Dock="Left" HorizontalAlignment="Left">Sync</Button>
-            <Button IsEnabled="{Binding TheDirectory, Converter={StaticResource DirectoryValidator}}" Foreground="red" Name="Stop" Click="Stop_Click" DockPanel.Dock="Right" HorizontalAlignment="Center">Stop</Button>
-            <Button IsEnabled="{Binding TheDirectory, UpdateSourceTrigger=PropertyChanged,Converter={StaticResource DirectoryValidator}}" Foreground="Blue" Name="ASync" Click="ASync_Click" DockPanel.Dock="Right" HorizontalAlignment="Right">ASync</Button>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal">
+                    <Button Name="SelectFolder" Click="SelectFolder_Click" >Select folder</Button>
+                    <Button Margin="5,0,5,0" Style="{StaticResource StartStop}"  IsEnabled="{Binding TheDirectory, Converter={StaticResource DirectoryValidator}}" Foreground="red" Name="Stop" Click="Stop_Click">Stop</Button>
+                    <Button Style="{StaticResource StartStop}" IsEnabled="{Binding TheDirectory, UpdateSourceTrigger=PropertyChanged,Converter={StaticResource DirectoryValidator}}" Foreground="Blue" Name="ASync" Click="ASync_Click">Start</Button>
+                </StackPanel>
+                <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Right">
+                    <TextBlock>List file in the folder:</TextBlock>
+                    <TextBlock TextWrapping="Wrap" Text="{Binding TheDirectory, UpdateSourceTrigger=PropertyChanged}" Name="folder" Height="20"/>
+                </StackPanel>
+            </Grid>
         </DockPanel>
         <ProgressBar DockPanel.Dock="Bottom" Height="30" Name="progress"></ProgressBar>
         <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <StackPanel>
-                <TextBlock>List file in the folder:</TextBlock>
-                <TextBlock Text="{Binding TheDirectory, UpdateSourceTrigger=PropertyChanged}" Name="folder" Height="20"/>
-            </StackPanel>
-            <ListBox Grid.Row="1" Name="result" Margin="0,10"/>
+            <ListBox Name="result" Margin="0,10"/>
         </Grid>
     </DockPanel>
 </Window>
