--- a/Mics/Mics/App.xaml
+++ b/Mics/Mics/App.xaml
@@ -1,9 +1,5 @@
 ﻿<Application x:Class="Mics.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Mics"
-             StartupUri="Audio.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             Startup="Application_Startup">
 </Application>
